[package]
name = "arc_ast"
version = "0.3.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Arc Readable Configuration Parser via Pest"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/Moe-Net/arc-rs"
exclude = ["/tests/*"]
edition = "2018"


[dependencies]
num = "0.3"
indexmap = "1.6"
bigdecimal = "0.2"
serde = "1.0"
serde_json = { version = "1.0", optional = true }
toml = { version = "0.5", optional = true }
# toml_edit = "*"
yaml-rust = { version = "0.4", optional = true }
# serde_yaml = "*"

[features]
default = ["convert"]
convert = ["json", "toml", "yaml"]
json = ["serde_json"]
yaml = ["yaml-rust"]
