[package]
name = "arc-fmt"
version = "0.0.1"
authors = ["192607617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/Moe-Net/arc-rs"
license = "MPL-2.0"


[dependencies]
pest = "2.1.2"
textwrap = "0.11"
arc_parser = {path = "../arc-parser",version = "0.2.0"}

[dev-dependencies]

[features]
