[package]
name = "arc-fmt"
version = "0.1.0"
authors = ["192607617@qq.com"]
description = "..."
license = "MPL-2.0"
readme = "../../Readme.md"
repository = "https://github.com/doki-land/arc-rs"
exclude = ["/tests/*"]
edition = "2018"


[dependencies]
textwrap = "0.11"
arc-pest = {path = "../voml-pest",version = "0"}

[dev-dependencies]

[features]
