[package]
name = "arc-lsp"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
arc-rs = "0.5.1"
async-trait = "0.1.59"
futures = { version = "0.3.25", features = ["compat"] }
# jsonrpc-core = "14.0"
# jsonrpc-derive = "14.0"
log = "0.4.17"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
# lsp-types = { version = "0.82", features = ["proposed"] }
tower-lsp = "0.17.0"
tower-service = "0.3.2"
tower-test = "0.4.0"
# clipboard = "0.5"
cli-clipboard = "0.3.0"
unicode-xid = "0.2.4"
state = "0.5.3"
itertools = "0.10.5"
