[package]
name = "arc"
publish = ["arc-rs"]
version = "0.0.1"
authors = ["192607617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/nyar-lang/NyarNative"
license = "MPL-2.0"


[dependencies]
arc_ast = {path = "../arc-ast",version = "0.0.1"}
arc_parser = {path = "../arc-parser",version = "0.1.0"}

[dev-dependencies]

[features]

[profile.release]
lto = true
opt-level = "s"