[package]
name = "arc-rs"
version = "0.0.1"
authors = ["192607617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/Moe-Net/arc-rs"
license = "MPL-2.0"


[dependencies]
arc_ast = {path = "../arc-ast",version = "0.0.1"}
arc_parser = {path = "../arc-parser",version = "0.1.0"}

[dev-dependencies]

[features]
