[package]
name = "arc_number"
version = "0.1.1"
authors = ["192607617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/Moe-Net/arc-rs"
license = "MPL-2.0"

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"

bigdecimal = "0.2"
[dependencies.num]
version = "0.3"
default-features = false
features =  ["serde", "std"]

[dev-dependencies]
