[package]
name = "arc_number"
version = "0.3.0"
authors = ["192607617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/Moe-Net/arc-rs"
license = "MPL-2.0"

[dependencies]
num = "0.4"
bigdecimal = "0.2"
serde1 = { version = "1.0", optional = true }

[dev-dependencies]

[features]
default = []

rand = [
    "num/rand",
]

serde = [
    "num/serde",
]