[package]
name = "rxnb"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
repository = "https://github.com/GalAster/IdiomSolitaire"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.20.0"
anyhow = "1.0.66"
wasm-bindgen = "0.2.83"

[dependencies.monaco]
version = "0.3.0"
features = ["yew-components"]
