[package]
name = "arc-rs"
version = "0.4.1"
authors = ["192607617@qq.com"]
edition = "2018"
description = "Arc Readable Configuration"
repository = "https://github.com/doki-land/arc-rs"
license = "MPL-2.0"

[dependencies]
arc-pest = {version = "0.4", path = "../arc-pest"}
arc_ast = {version = "0.4", path = "../arc-ast"}