[package]
name = "arc_vscode"
publish = false
version = "0.1.1"
authors = ["192607617@qq.com"]
description = "..."
repository = "https://github.com/Moe-Net/arc-rs"
readme = "README.md"
license = "MPL-2.0"
exclude = ["/tests/*"]

[dependencies]
wasm-bindgen = "0.2.58"
arc_fmt = {path = "../arc-fmt",version = "0.1.0"}

[dev-dependencies]

[lib]
crate-type = ["cdylib", "rlib"]
