[package]
authors = ["192607617@qq.com"]
description = "..."
exclude = ["/tests/*"]
license = "MPL-2.0"
name = "arc_vscode"
publish = false
readme = "README.md"
repository = "https://github.com/Moe-Net/arc-rs"
version = "0.1.1"

[dependencies]
arc_fmt = {path = "../arc-fmt", version = "0.1.0"}
wasm-bindgen = "0.2.58"

[dev-dependencies]

[lib]
crate-type = ["cdylib", "rlib"]
