[package]
name = "serde_arc"
version = "0.0.1"
authors = ["192607617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/Moe-Net/arc-rs"
license = "MPL-2.0"


[dependencies]
serde = "1.0.114"

# serde_json = "^1.0.45"
arc_number = {path = "../arc-number", version = "0.1.0"}
linked-hash-map = "0.5.2"
arc_parser = {path = "../arc-parser",version = "0.3.0"}
pest = "2.1.2"

[dev-dependencies]
serde_derive = "^1.0.114"

[features]
