[package]
name = "arc-rs"
version = "0.5.1"
authors = ["Aster <galaster@foxmail.com>"]
description = "Arc Readable Configuration"
license = "MPL-2.0"
readme = "../../Readme.md"
repository = "https://github.com/doki-land/arc-rs"
exclude = ["/tests/*"]
edition = "2018"


[dependencies]
num = "0.3"
bigdecimal = "0.2"
indexmap = "1.6"
yggdrasil-shared = "0.1.7"

serde = "1.0"

arc-pest = {version = "0.4", path = "../arc-pest"}
lsp-types = {version = "0.81", optional = true}

[features]
default = ["lsp"]

lsp = ["lsp-types"]