[package]
name = "arc-rs"
version = "0.5.1"
authors = ["Aster <galaster@foxmail.com>"]
description = "Arc Readable Configuration"
license = "MPL-2.0"
readme = "../../Readme.md"
repository = "https://github.com/doki-land/arc-rs"
exclude = ["/tests/*"]
edition = "2018"

[dependencies]
num = "0.4.0"
bigdecimal = "0.3.0"
indexmap = "1.9.2"

serde1 = { version = "1.0.1", optional = true }
lsp-types = { version = "0.93.2", optional = true }

voml-types = {version = "0.1", path = "../voml-types" }
voml-collection = "0.3.0"

[dependencies.yggdrasil-shared]
version = "0.2.2"
default-features = false

[features]
default = []
serde = ["serde1"]
lsp = [
    "lsp-types",
]
