[package]
name = "voml-collection"
version = "0.3.1"
authors = ["192607617@qq.com"]
description = "Collections for [VOML](https://github.com/voml/voml-rs)"
homepage = "https://github.com/voml/voml-rs"
repository = "https://github.com/voml/voml-rs"
documentation = "https://docs.rs/voml-collection"
readme = "Readme.md"
license = "MPL-2.0"
exclude = ["/tests/*"]
edition = "2021"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
num = { version = "0.4.0", features = ["serde"] }
dashu = { version = "0.3.0", features = ["serde"] }
rust_decimal = { version = "1.26.1", features = ["serde"], optional = true }
indexmap = { version = "1.9.2", features = ["serde"] }

[dev-dependencies]

[features]
default = []
