[package]
name = "voml-edit"
version = "0.1.0"
authors = ["192607617@qq.com"]
description = "External function system for arc"
license = "MPL-2.0"
readme = "Readme.md"
repository = "https://github.com/doki-land/arc-rs"
documentation = "https://docs.rs/voml-parser"
exclude = ["/tests/*"]
edition = "2018"

[dependencies]
serde = "1.0.149"


[dev-dependencies]

[features]
default = []

