[package]
name = "voml-error"
version = "0.1.1"
authors = ["192607617@qq.com"]
description = "External function system for arc"
license = "MPL-2.0"
readme = "Readme.md"
repository = "https://github.com/voml/voml-rs"
documentation = "https://docs.rs/voml-error"
exclude = ["/tests/**"]
edition = "2018"

[dependencies]
diagnostic = "0.3.3"

peginator = { version = "0.3.0", optional = true }
num = { version = "0.4.0", optional = true }
bigdecimal = { version = "0.3.0", optional = true }

[dev-dependencies]

[features]
default = []
