[package]
name = "voml-types"
version = "0.1.0"
authors = ["192607617@qq.com"]
description = "External function system for arc"
license = "MPL-2.0"
readme = "Readme.md"
repository = "https://github.com/voml/voml-rs"
documentation = "https://docs.rs/voml-types"
exclude = ["/tests/**"]
edition = "2018"

[dependencies]
diagnostic = "0.4.2"
peginator = { version = "0.4.0", optional = true }
num = { version = "0.4.0" }
bigdecimal = { version = "0.3.0" }

[dependencies.voml-collection]
#version = "0.3.0"
path = "../voml-collection"

[dev-dependencies]
serde_json = "1.0.89"

[features]
default = []
