[package]
name = "voml-types"
version = "0.1.0"
authors = ["192607617@qq.com"]
description = "External function system for arc"
license = "MPL-2.0"
readme = "Readme.md"
repository = "https://github.com/voml/voml-rs"
documentation = "https://docs.rs/voml-types"
exclude = ["/tests/**"]
edition = "2018"

[dependencies]
diagnostic = "0.4.2"
peginator = { version = "0.4.0", optional = true }
num = { version = "0.4.0" }
indexmap = { version = "1.9.2", features = ["serde"] }
#bigdecimal = { version = "0.3.0" }
rust_decimal = { version = "1.26.1"}
serde_json = { version = "1.0.89", optional = true }
serde = { version = "1.0.147", features = ["derive"] }

[dependencies.voml-collection]
#version = "0.3.0"
path = "../voml-collection"
features = ["bigdecimal"]

[dev-dependencies]


[features]
default = ["serde_json"]
