[package]
name = "voml-types"
version = "0.1.1"
authors = ["192607617@qq.com"]
description = "External function system for arc"
license = "MPL-2.0"
readme = "Readme.md"
repository = "https://github.com/voml/voml-rs"
documentation = "https://docs.rs/voml-types"
exclude = ["/tests/**"]
edition = "2018"

[dependencies]
diagnostic = "0.4.3"
peginator = { version = "0.6.0", optional = true }
num = "0.4.0"
indexmap = { version = "1.9.2", features = ["serde"] }
#bigdecimal = { version = "0.3.0" }
rust_decimal = "1.27.0"
serde_json = { version = "1.0.89", optional = true }
serde = { version = "1.0.149", features = ["derive"] }

[dependencies.voml-collection]
features = []
version = "0.3.1"

[dev-dependencies]
peginator_codegen = "0.6.0"


[features]
default = []
