[package]
name = "voml-vm"
version = "0.1.0"
authors = ["192607617@qq.com"]
description = "..."
license = "MPL-2.0"
readme = "../../Readme.md"
repository = "https://github.com/doki-land/arc-rs"
exclude = ["/tests/*"]
edition = "2018"

[dependencies]
num = "0.3"
bigdecimal = "0.2"
serde1 = { version = "1.0", optional = true }

[dev-dependencies]

[features]
default = []

rand = [
    "num/rand",
]

serde = [
    "num/serde",
]