[package]
name = "von"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/voml/vos-rs"
homepage = "https://github.com/voml/vos-rs"
documentation = "https://docs.rs/vos-ast"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
indexmap = "1.9.1"
num = "0.4.0"
bigdecimal = "0.3.0"
peginator = "0.3.0"
unicode-ident = "1.0.5"
diagnostic = "0.3.2"
serde = { version = "1.0.147", features = ["derive"], optional = true }

[dependencies.voml-error]
version = "0.1.0"
path = "../voml-error"
features = []

[dev-dependencies]
serde_json = "1.0.87"

[build-dependencies]
peginator = "0.3.0"

[features]
default = ["serde"]
serde = ["dep:serde", "bigdecimal/serde", "indexmap/serde", "num/serde"]
