[package]
name = "von"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Virtual Object Notation"
repository = "https://github.com/voml/voml-rs"
homepage = "https://github.com/voml/voml-rs"
documentation = "https://docs.rs/von"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
indexmap = "1.9.1"
num = "0.4.0"
bigdecimal = "0.3.0"
peginator = "0.3.0"
unicode-ident = "1.0.5"
serde = { version = "1.0.147", features = ["derive"], optional = true }
voml-collection = "0.2.0"

[dependencies.voml-error]
version = "0.1.0"
path = "../voml-error"
features = ["peginator"]

[dev-dependencies]
serde_json = "1.0.87"

[build-dependencies]
peginator = "0.3.0"

[features]
default = ["serde"]
serde = ["dep:serde", "bigdecimal/serde", "indexmap/serde", "num/serde"]
