[package]
name = "von"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Virtual Object Notation"
repository = "https://github.com/voml/voml-rs"
homepage = "https://github.com/voml/voml-rs"
documentation = "https://docs.rs/von"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
indexmap = "1.9.2"
num = "0.4.0"
bigdecimal = "0.3.0"
peginator = "0.6.0"
unicode-ident = "1.0.5"
serde = { version = "1.0.148", features = ["derive"], optional = true }

[dependencies.voml-collection]
version = "0.3.1"
features = []

[dependencies.voml-types]
version = "0.1.0"
path = "../voml-types"
features = ["peginator"]

[dev-dependencies]
serde_json = "1.0.89"

[build-dependencies]
peginator = "0.6.0"

[features]
default = []
serde = ["dep:serde", "bigdecimal/serde", "indexmap/serde", "num/serde"]
